# dddns

./: .gitignore  README.md  pyproject.toml
.github/workflows/: superlinter.yml
dddns/: __main__.py  main.py
