[tool.poetry]
name = "dddns"
version = "0.2.0"
description = ""
authors = ["edsion <edsion@i1hao.com>"]

[tool.poetry.dependencies]
python = "^3.6"
httpx = {extras = ["http2"], version = "^0.16.1"}
importlib-metadata = { version = "^3.4.0", python = "<3.8" }
typer = {extras = ["all"], version = "^0.3.2"}

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.7.0"
mypy = "^0.800"
coverage = {extras = ["toml"], version = "^5.4"}

[tool.poetry.scripts]
dddns = "dddns.main:app"

[tool.isort]
# 解决black与isort的冲突，来源：https://black.readthedocs.io/en/stable/compatible_configs.html#isort
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
